Update: Fix announcement border bleeding

--- a/app/assets/stylesheets/design/announcements.scss
+++ b/app/assets/stylesheets/design/announcements.scss
@@ -1,6 +1,5 @@
 .announcement {
   background-color: $fr-nav-orange;
-  border-bottom: 1px solid $fr-orange;
   color: $white;
 
   .announcement-inner {
